@@ -2,15 +2,11 @@ package com.dabana.backend.modules.restaurant.service;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.TreeMap;
-import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import com.dabana.backend.modules.auth.entity.User;
@@ -18,17 +14,13 @@ import com.dabana.backend.modules.auth.repository.UserRepository;
 import com.dabana.backend.modules.booking.Booking;
 import com.dabana.backend.modules.booking.BookingRepository;
 import com.dabana.backend.modules.booking.BookingStatus;
-import com.dabana.backend.modules.booking.BookingTable;
 import com.dabana.backend.modules.booking.dto.BookingDtos;
 import com.dabana.backend.modules.booking.mapper.BookingMapper;
-import com.dabana.backend.modules.branch2.controller.BranchController;
 import com.dabana.backend.modules.branch2.entity.Branch;
 import com.dabana.backend.modules.branch2.repository.BranchRepository;
-import com.dabana.backend.modules.diningtable.dto.response.DiningTableResponse;
 import com.dabana.backend.modules.diningtable.repository.DiningTableRepository;
 import com.dabana.backend.modules.diningtable.util.DiningTableStatus;
 import com.dabana.backend.modules.restaurant.ApprovalStatus;
-import com.dabana.backend.modules.restaurant.Dto.OwnerDto;
 import com.dabana.backend.modules.restaurant.Dto.report.BranchReportDto;
 import com.dabana.backend.modules.restaurant.Dto.report.PerDayReport;
 import com.dabana.backend.modules.restaurant.Dto.request.RestaurantRegisterRequest;
@@ -96,116 +88,114 @@ public class RestaurantService  {
     }
 
     public List<BranchReportDto> dashboard(Long ownerId) {
-        
-
         List<Branch> branches = branchRepository.findByRestaurant_Owner_Id(ownerId);
+        //de tam phuc vu test
+        LocalDate now =  LocalDate.of(2026, 6, 30);
 
-        LocalDate now = LocalDate.of(2026, 6, 30);
-        
         return branches.stream()
                 .map(branch -> buildBranchReport(branch, now))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private BranchReportDto buildBranchReport(
-        Branch branch,
-
-        LocalDate now) {
-                        
+    private BranchReportDto buildBranchReport(Branch branch, LocalDate now) {
         Long branchId = branch.getId();
 
-        // 1. Đặt bàn hôm nay (tất cả booking có reservationTime trong ngày hôm nay)
-        Long todayBooking = bookingRepository
-                .countByBranchIdAndDate(
-                        branchId,
-                        now); //da dinh day la ngay hom nay
+        List<Booking> branchBookings = bookingRepository.findByBranchId(branchId);
+        List<Booking> branchBookings30Day = bookingRepository.findByBranchIdAndCreatedAtAfter(branchId,now.minusDays(30));
+        List<Booking> bookingsForToday = branchBookings.stream()
+                .filter(booking -> isSameDate(booking.getCreatedAt(), now))
+                .toList();
 
-        // 2. Đang phục vụ (đã check-in, chưa hoàn tất)
-        Long totalServing = bookingRepository
-                        .countByBranchIdAndStatusAndCreatedAt(
-                                        branchId, BookingStatus.CHECKED_IN,now);
+        long todayBooking = bookingsForToday.size();
 
-        // 3. Bàn đã đặt (đã confirm nhưng chưa tới giờ / chưa check-in)
-        Long totalBooked = bookingRepository
-                        .countByBranchIdAndStatusInAndCreatedAt(
-                                        branchId,
-                                        List.of(BookingStatus.COMPLETED, BookingStatus.HOLDING,
-                                                        BookingStatus.AWAITING_PAYMENT),
-                                        now);
+        long totalServing = branchBookings.stream()
+                .filter(booking -> booking.getStatus() == BookingStatus.CHECKED_IN)
+                .count();
+        long totalBooked = branchBookings.stream()
+                .filter(booking -> isBookedStatus(booking.getStatus()))
+                .count();
 
-        // 4. Hàng chờ (waitlist)
-        Long totalWait = waitlistRepository
-                        .countByBranchIdAndStatus(branchId, WaitlistStatus.WAITING);
+        Long totalWait = waitlistRepository.countByBranchIdAndStatus(branchId, WaitlistStatus.WAITING);
 
-        // 5. Tỷ lệ lấp bàn = số bàn đang occupied/reserved / tổng số bàn của chi nhánh
         long totalTables = diningTableRepository.countByZone_Branch_Id(branchId);
-
         long occupiedTables = diningTableRepository
-                        .countByZone_Branch_IdAndStatusIn(branchId,
-                                        List.of(DiningTableStatus.OCCUPIED, DiningTableStatus.RESERVED));
+                .countByZone_Branch_IdAndStatusIn(branchId,
+                        List.of(DiningTableStatus.OCCUPIED, DiningTableStatus.RESERVED));
         double fillRate = totalTables == 0
-                        ? 0.0
-                        : occupiedTables * 100.0 / totalTables;
+                ? 0.0
+                : occupiedTables * 100.0 / totalTables;
 
-        // 6. Tỷ lệ no-show = số no-show / tổng số booking đã "kết thúc vòng đời" hôm nay
-        
-        long finishedToday = bookingRepository
-                        .countByBranchIdAndStatusInAndCreatedAt(
-                                        branchId, List.of(BookingStatus.COMPLETED,BookingStatus.CHECKED_IN),now);
-        long noShowToday = bookingRepository
-                        .countByBranchIdAndStatusAndCreatedAt(
-                                        branchId, BookingStatus.NO_SHOW, now);
-        double noShowRate = finishedToday == 0
-                        ? 0.0
-                        : noShowToday * 100.0 / finishedToday;
+        long finished30day = branchBookings30Day.stream()
+                .filter(booking -> isFinishedStatus(booking.getStatus()))
+                .count();
+        long noShow30day = branchBookings30Day.stream()
+                .filter(booking -> booking.getStatus() == BookingStatus.NO_SHOW)
+                .count();
+        double noShowRate = finished30day == 0
+                ? 0.0
+                : noShow30day * 100.0 / finished30day;
 
-        List<PerDayReport> perDayReports = new ArrayList<>();
-        Map<LocalDate, List<Booking> >bookings =  bookingRepository.findByBranchId(branchId)
-                        .stream()
-                .collect(Collectors.groupingBy(b -> b.getCreatedAt().toLocalDate(),
+        Map<LocalDate, List<Booking>> bookingsByDate = branchBookings.stream()
+                .collect(Collectors.groupingBy(
+                        booking -> booking.getCreatedAt().toLocalDate(),
                         TreeMap::new,
                         Collectors.toList()));
 
-        if (!bookings.isEmpty()) {
-            for (LocalDate dateTime : bookings.keySet()) {
-                PerDayReport perDayReport = builPerDayReport(bookings.get(dateTime));
-                perDayReports.add(perDayReport);
-            }
-        }
+        List<PerDayReport> perDayReports = bookingsByDate.entrySet().stream()
+                .map(entry -> buildPerDayReport(branchId, entry.getValue(), entry.getKey()))
+                .toList();
 
         return BranchReportDto.builder()
-                        .branchId(branchId)
-                        .branchName(branch.getName())
-                        .TodayBooking(todayBooking)
-                        .TotalServing(totalServing)
-                        .TotalBooked(totalBooked)
-                        .TotalWait(totalWait)
-                        .fillRate(fillRate)
-                        .no_showRate(noShowRate)
-                        .perDayReports(perDayReports)
-                        .build();
+                .branchId(branchId)
+                .branchName(branch.getName())
+                .TodayBooking(todayBooking)
+                .TotalServing(totalServing)
+                .TotalBooked(totalBooked)
+                .TotalWait(totalWait)
+                .fillRate(fillRate)
+                .no_showRate30Day(noShowRate)
+                .perDayReports(perDayReports)
+                .build();
     }
-    
-    private PerDayReport builPerDayReport(List<Booking> bookings) {
-        
-        // PerDayReport report;
 
-        List<BookingDtos.BookingResponse> bookingDtos = bookings.stream().map(b -> bookingMapper.toResponse(b))
+    private PerDayReport buildPerDayReport(Long branchId, List<Booking> bookings, LocalDate date) {
+        List<BookingDtos.BookingResponse> bookingDtos = bookings.stream()
+                .map(bookingMapper::toResponse)
                 .toList();
-        
-        // for (BookingDtos.BookingResponse bookingResponse : bookingDtos) {
-        //     report.setTodayBooked();
-        // }
 
+        long dailyBooked = bookings.stream()
+                .filter(booking -> booking.getStatus() == BookingStatus.COMPLETED)
+                .count();
+        long dailyBooking = bookings.size();
+        long dailyServing = bookings.stream()
+                .filter(booking -> booking.getStatus() == BookingStatus.CHECKED_IN)
+                .count();
+        long dailyWait = bookings.stream()
+                .filter(booking -> booking.getStatus() == BookingStatus.COMPLETED)
+                .count();
 
         return PerDayReport.builder()
-                .ReportedDate(LocalDateTime.now())
-                .TodayBooked(0)
-                .TodayBooking(0)
-                .TodayServing(0)
-                .TodayWait(0)
+                .reportedDate(LocalDateTime.now())
+                .dailyBooked(dailyBooked)
+                .dailyBooking(dailyBooking)
+                .dailyServing(dailyServing)
+                .dailyWait(dailyWait)
                 .bookingDtos(bookingDtos)
                 .build();
+    }
+
+    private boolean isSameDate(LocalDateTime bookingDateTime, LocalDate targetDate) {
+        return bookingDateTime != null && bookingDateTime.toLocalDate().equals(targetDate);
+    }
+
+    private boolean isBookedStatus(BookingStatus status) {
+        return status == BookingStatus.COMPLETED
+                || status == BookingStatus.HOLDING
+                || status == BookingStatus.AWAITING_PAYMENT;
+    }
+
+    private boolean isFinishedStatus(BookingStatus status) {
+        return status == BookingStatus.COMPLETED || status == BookingStatus.CHECKED_IN;
     }
     
    
